--- a/Wunderlist/Wunderlist.Models/Wunderlist.Model.csproj
+++ b/Wunderlist/Wunderlist.Models/Wunderlist.Model.csproj
@@ -58,7 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppUser.cs" />
+    <Compile Include="Category.cs" />
+    <Compile Include="Picture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
