--- a/Wunderlist/Wunderlist.Data/Wunderlist.Data.csproj
+++ b/Wunderlist/Wunderlist.Data/Wunderlist.Data.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\TaskRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="WunderlistContext.cs" />
   </ItemGroup>
