--- a/Wunderlist/Wunderlist.Data/Wunderlist.Data.csproj
+++ b/Wunderlist/Wunderlist.Data/Wunderlist.Data.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Repositories\CommentRepository.cs" />
     <Compile Include="Repositories\PictureRepository.cs" />
     <Compile Include="Repositories\ProfileRepository.cs" />
+    <Compile Include="Repositories\RoleRepository.cs" />
     <Compile Include="Repositories\TaskRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="WunderlistContext.cs" />
