--- a/Wunderlist/Wunderlist.Models/Wunderlist.Model.csproj
+++ b/Wunderlist/Wunderlist.Models/Wunderlist.Model.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Category.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="Picture.cs" />
-    <Compile Include="Profile.cs" />
+    <Compile Include="UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="ToDoItem.cs" />
