--- a/Wunderlist/Wunderlist.Service/Wunderlist.Service.csproj
+++ b/Wunderlist/Wunderlist.Service/Wunderlist.Service.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Infrastructure\BaseService.cs" />
     <Compile Include="Infrastructure\IService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoleService.cs" />
+    <Compile Include="Services\RoleService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
