--- a/Wunderlist/Wunderlist.Web/Web.config
+++ b/Wunderlist/Wunderlist.Web/Web.config
@@ -7,9 +7,9 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Wunderlist.Web-20160216040419.mdf;Initial Catalog=aspnet-Wunderlist.Web-20160216040419;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="WunderlistConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Wunderlist.Web-20160216040419.mdf;Initial Catalog=aspnet-Wunderlist.Web-20160216040419;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
