--- a/Wunderlist/Wunderlist.Data/packages.config
+++ b/Wunderlist/Wunderlist.Data/packages.config
@@ -3,4 +3,6 @@
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="MiniAutFac" version="1.3.8" targetFramework="net452" />
+  <package id="MiniAutFac.ScopePerRequest" version="1.0.0.0" targetFramework="net452" />
 </packages>
