rename entities and repositories, add profileSerrvice

--- a/Wunderlist/Wunderlist.Models/Wunderlist.Model.csproj
+++ b/Wunderlist/Wunderlist.Models/Wunderlist.Model.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="User.cs" />
-    <Compile Include="Category.cs" />
+    <Compile Include="ToDoItemList.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="Picture.cs" />
     <Compile Include="UserProfile.cs" />
