--- a/Wunderlist/Wunderlist.Data/Wunderlist.Data.csproj
+++ b/Wunderlist/Wunderlist.Data/Wunderlist.Data.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CategoryRepository.cs" />
+    <Compile Include="Repositories\ToDoItemListRepository.cs" />
     <Compile Include="Repositories\CommentRepository.cs" />
     <Compile Include="Repositories\PictureRepository.cs" />
     <Compile Include="Repositories\ProfileRepository.cs" />
