--- a/Wunderlist/Wunderlist.Service/Wunderlist.Service.csproj
+++ b/Wunderlist/Wunderlist.Service/Wunderlist.Service.csproj
@@ -45,14 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\AutofacServiceModule.cs" />
-    <Compile Include="Interfaces\ICategoryService.cs" />
+    <Compile Include="Interfaces\IToDoItemListService.cs" />
     <Compile Include="Interfaces\ICommentService.cs" />
     <Compile Include="Interfaces\IRoleService.cs" />
     <Compile Include="Interfaces\IToDoItemService.cs" />
     <Compile Include="Interfaces\IProfileService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="Services\ToDoItemListService.cs" />
     <Compile Include="Services\CommentService.cs" />
     <Compile Include="Services\ProfileService.cs" />
     <Compile Include="Services\RoleService.cs" />
