--- a/Wunderlist/Epam.Wunderlist.Core/Epam.Wunderlist.Core.csproj
+++ b/Wunderlist/Epam.Wunderlist.Core/Epam.Wunderlist.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{816623AE-1BC8-4577-96B0-D698FDE81975}</ProjectGuid>
+    <ProjectGuid>{5D52CD2F-EFD1-440B-AA00-BF2D00F76515}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wunderlist.Service</RootNamespace>
-    <AssemblyName>Wunderlist.Service</AssemblyName>
+    <RootNamespace>Epam.Wunderlist.Core</RootNamespace>
+    <AssemblyName>Epam.Wunderlist.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,33 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\AutofacServiceModule.cs" />
-    <Compile Include="Interfaces\IToDoItemListService.cs" />
-    <Compile Include="Interfaces\ICommentService.cs" />
-    <Compile Include="Interfaces\IRoleService.cs" />
-    <Compile Include="Interfaces\IToDoItemService.cs" />
-    <Compile Include="Interfaces\IProfileService.cs" />
-    <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ToDoItemListService.cs" />
-    <Compile Include="Services\CommentService.cs" />
-    <Compile Include="Services\ProfileService.cs" />
-    <Compile Include="Services\RoleService.cs" />
-    <Compile Include="Services\ToDoItemService.cs" />
-    <Compile Include="Services\UserService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Wunderlist.Data\Wunderlist.Data.csproj">
-      <Project>{7a056ecd-4e65-4add-81a4-a1278e32a01b}</Project>
-      <Name>Wunderlist.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Wunderlist.Models\Wunderlist.Model.csproj">
-      <Project>{a7f8de6c-835e-4c4b-b7a1-21f491e95ccf}</Project>
-      <Name>Wunderlist.Model</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
