--- a/Wunderlist/Wunderlist.Web/Wunderlist.Web.csproj
+++ b/Wunderlist/Wunderlist.Web/Wunderlist.Web.csproj
@@ -199,6 +199,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\imgs\wl_icon.png" />
+    <Content Include="Content\login\login.css" />
     <Content Include="Content\register\register.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
