--- a/Wunderlist/Epam.Wunderlist.Web/Web.config
+++ b/Wunderlist/Epam.Wunderlist.Web/Web.config
@@ -16,6 +16,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--Cloud-->
+    <add key="CloudName" value="saiclound" />
+    <add key="ApiKey" value="625477429355977" />
+    <add key="ApiSecret" value="x3AgJsxmHrllViDQd8BS9sf9hz0" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
