--- a/Wunderlist/Epam.Wunderlist.DataAccess.Interfaces/Epam.Wunderlist.DataAccess.Interfaces.csproj
+++ b/Wunderlist/Epam.Wunderlist.DataAccess.Interfaces/Epam.Wunderlist.DataAccess.Interfaces.csproj
@@ -43,7 +43,6 @@
     <Compile Include="ICommentRepository.cs" />
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="IPictureRepository.cs" />
-    <Compile Include="IProfileRepository.cs" />
     <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="IRoleRepository.cs" />
     <Compile Include="IToDoItemListRepository.cs" />
@@ -52,7 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Wunderlist.Models\Epam.Wunderlist.Models.csproj">
+    <ProjectReference Include="..\Epam.Wunderlist.Models\Epam.Wunderlist.Models.csproj">
       <Project>{a7f8de6c-835e-4c4b-b7a1-21f491e95ccf}</Project>
       <Name>Epam.Wunderlist.Models</Name>
     </ProjectReference>
