Fix project files

--- a/Wunderlist/Epam.Wunderlist.DependencyResolver/Epam.Wunderlist.DependencyResolver.csproj
+++ b/Wunderlist/Epam.Wunderlist.DependencyResolver/Epam.Wunderlist.DependencyResolver.csproj
@@ -48,15 +48,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Epam.Wunderlist.CloudStorage.Cloudinary\Epam.Wunderlist.CloudStorage.Cloudinary.csproj">
+      <Project>{c68d2463-587c-4fd0-8aec-1b7d0838d322}</Project>
+      <Name>Epam.Wunderlist.CloudStorage.Cloudinary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Epam.Wunderlist.DataAccess.Interfaces\Epam.Wunderlist.DataAccess.Interfaces.csproj">
       <Project>{78aca394-2979-46c8-a9f7-52f5346b875e}</Project>
       <Name>Epam.Wunderlist.DataAccess.Interfaces</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Wunderlist.Data\Epam.Wunderlist.DataAccess.MsSql.csproj">
+    <ProjectReference Include="..\Epam.Wunderlist.DataAccess.MsSql\Epam.Wunderlist.DataAccess.MsSql.csproj">
       <Project>{7a056ecd-4e65-4add-81a4-a1278e32a01b}</Project>
       <Name>Epam.Wunderlist.DataAccess.MsSql</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Wunderlist.Service\Epam.Wunderlist.Services.csproj">
+    <ProjectReference Include="..\Epam.Wunderlist.Services\Epam.Wunderlist.Services.csproj">
       <Project>{816623ae-1bc8-4577-96b0-d698fde81975}</Project>
       <Name>Epam.Wunderlist.Services</Name>
     </ProjectReference>
