--- a/Wunderlist/Epam.Wunderlist.DataAccess.MsSql/Epam.Wunderlist.DataAccess.MsSql.csproj
+++ b/Wunderlist/Epam.Wunderlist.DataAccess.MsSql/Epam.Wunderlist.DataAccess.MsSql.csproj
@@ -46,14 +46,6 @@
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MiniAutFac, Version=1.3.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MiniAutFac.1.3.8\lib\portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10\MiniAutFac.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MiniAutFac.ScopePerRequest, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MiniAutFac.ScopePerRequest.1.0.0.0\lib\net452\MiniAutFac.ScopePerRequest.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -92,7 +84,7 @@
       <Project>{78aca394-2979-46c8-a9f7-52f5346b875e}</Project>
       <Name>Epam.Wunderlist.DataAccess.Interfaces</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Wunderlist.Models\Epam.Wunderlist.Models.csproj">
+    <ProjectReference Include="..\Epam.Wunderlist.Models\Epam.Wunderlist.Models.csproj">
       <Project>{a7f8de6c-835e-4c4b-b7a1-21f491e95ccf}</Project>
       <Name>Epam.Wunderlist.Models</Name>
     </ProjectReference>
