--- a/Wunderlist/Epam.Wunderlist.Services/Epam.Wunderlist.Services.csproj
+++ b/Wunderlist/Epam.Wunderlist.Services/Epam.Wunderlist.Services.csproj
@@ -41,12 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IImageService.cs" />
     <Compile Include="Interfaces\IToDoItemListService.cs" />
     <Compile Include="Interfaces\ICommentService.cs" />
     <Compile Include="Interfaces\IRoleService.cs" />
     <Compile Include="Interfaces\IToDoItemService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
+    <Compile Include="Models\Image.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ImageService.cs" />
     <Compile Include="Services\ToDoItemListService.cs" />
     <Compile Include="Services\CommentService.cs" />
     <Compile Include="Services\RoleService.cs" />
