--- a/Wunderlist/Epam.Wunderlist.Web/Epam.Wunderlist.Web.csproj
+++ b/Wunderlist/Epam.Wunderlist.Web/Epam.Wunderlist.Web.csproj
@@ -197,6 +197,9 @@
     <Compile Include="App_Start\WebApiRouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\WebApi\ImageController.cs" />
+    <Compile Include="Controllers\WebApi\ItemController.cs" />
+    <Compile Include="Controllers\WebApi\ItemListController.cs" />
     <Compile Include="Controllers\WebApi\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -212,6 +215,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
+    <Compile Include="ViewModels\ToDoItemListViewModel.cs" />
+    <Compile Include="ViewModels\ToDoItemViewModel.cs" />
+    <Compile Include="ViewModels\UserInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\account.css" />
@@ -222,13 +228,18 @@
     <Content Include="Content\imgs\av_demo.png" />
     <Content Include="Content\imgs\wl_icon.png" />
     <Content Include="Content\ui-bootstrap-csp.css" />
-    <Content Include="Content\userModal.css" />
-    <Content Include="Content\webapp-media.css" />
+    <Content Include="Content\wunderlistCss\itemListModal.css" />
+    <Content Include="Content\wunderlistCss\userModal.css" />
+    <Content Include="Content\wunderlistCss\webapp-media.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\webapp.css" />
-    <Content Include="partials\userModal.html" />
+    <Content Include="Content\wunderlistCss\webapp.css" />
+    <Content Include="partials\modals\changeListModal.html" />
+    <Content Include="partials\modals\createListModal.html" />
+    <Content Include="partials\modals\userModa.html" />
+    <Content Include="Scripts\angular_lib\angular-animate.js" />
+    <Content Include="Scripts\angular_lib\angular-animate.min.js" />
     <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.js" />
     <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.min.js" />
     <Content Include="Scripts\angular-ui\ui-bootstrap.js" />
@@ -240,7 +251,6 @@
     <Content Include="Scripts\angular_lib\angular-route.min.js" />
     <Content Include="Scripts\angular_lib\angular.js" />
     <Content Include="Scripts\angular_lib\angular.min.js" />
-    <Content Include="Scripts\angular_lib\angularModalService.js" />
     <Content Include="Scripts\app\app.js" />
     <Content Include="Scripts\angular_lib\angular.min.js.map" />
     <Content Include="Scripts\angular_lib\angular-route.min.js.map" />
@@ -253,16 +263,25 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Scripts\angular_lib\angular-resource.min.js.map" />
+    <Content Include="Scripts\angular_lib\angular-animate.min.js.map" />
     <None Include="Scripts\jquery\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\app\controllers\listController.js" />
+    <Content Include="Scripts\app\controllers\taskListCreateModalController.js" />
+    <Content Include="Scripts\app\controllers\taskListController.js" />
+    <Content Include="Scripts\app\controllers\taskListChangeModalController.js" />
     <Content Include="Scripts\app\controllers\mainController.js" />
     <Content Include="Scripts\app\controllers\searchController.js" />
     <Content Include="Scripts\app\controllers\taskController.js" />
     <Content Include="partials\list.html" />
     <Content Include="Scripts\app\controllers\userController.js" />
+    <Content Include="Scripts\app\derectives\rigthClickDerective.js" />
+    <Content Include="Scripts\app\derectives\wlEnterDerective.js" />
+    <Content Include="Scripts\app\services\taskListService.js" />
+    <Content Include="Scripts\app\services\taskService.js" />
+    <Content Include="Scripts\app\services\uploadService.js" />
     <Content Include="Scripts\app\services\userService.js" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\FileAPI.flash.swf" />
+    <Content Include="Scripts\FileAPI.js" />
+    <Content Include="Scripts\FileAPI.min.js" />
     <Content Include="Scripts\jquery\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery\jquery.validate-vsdoc.js" />
@@ -271,6 +290,12 @@
     <Content Include="Scripts\jquery\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\ng-file-upload-all.js" />
+    <Content Include="Scripts\ng-file-upload-all.min.js" />
+    <Content Include="Scripts\ng-file-upload-shim.js" />
+    <Content Include="Scripts\ng-file-upload-shim.min.js" />
+    <Content Include="Scripts\ng-file-upload.js" />
+    <Content Include="Scripts\ng-file-upload.min.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
