--- a/Wunderlist/Epam.Wunderlist.Web/packages.config
+++ b/Wunderlist/Epam.Wunderlist.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Angular.UI.Bootstrap" version="1.2.1" targetFramework="net452" />
+  <package id="angular-file-upload" version="12.0.4" targetFramework="net452" />
+  <package id="AngularJS.Animate" version="1.5.0" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.5.0" targetFramework="net452" />
   <package id="AngularJS.Resource" version="1.5.0" targetFramework="net452" />
   <package id="AngularJS.Route" version="1.5.0" targetFramework="net452" />
