--- a/Wunderlist/Epam.Wunderlist.Services/NLog.config
+++ b/Wunderlist/Epam.Wunderlist.Services/NLog.config
@@ -6,41 +6,13 @@
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log" >
 
-
-  <!-- optional, add some variabeles
-  https://github.com/nlog/NLog/wiki/Configuration-file#variables
-  -->
   <variable name="myvar" value="myvalue"/>
-
-  <!-- 
-  See https://github.com/nlog/nlog/wiki/Configuration-file 
-  for information on customizing logging rules and outputs.
-   -->
   <targets>
-
-    <!-- 
-    add your targets here 
-    See https://github.com/nlog/NLog/wiki/Targets for possible targets.
-    See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
-    -->
-
-    <!--
-    Writing events to the a file with the date in the filename. 
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
-    <target name="logfile" xsi:type="File" fileName="File.txt" />
-    <target name="file" xsi:type="File" fileName="FileTraceAndDebug.txt" /></targets>
+    <target name="logfile" xsi:type="File" fileName="C:\\File.txt" />
+  </targets>
 
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="file"/>
-    <logger name="*" minlevel="Debug" writeTo="file"/>
+    <logger name="*" minlevel="Trace" writeTo="logfile"/>
     <logger name="*" minlevel="Error" writeTo="logfile"/>
-    <!-- add your logging rules here -->
-
-    <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
-    <logger name="*" minlevel="Debug" writeTo="f" />
-    -->
   </rules>
 </nlog>
