--- a/Wunderlist/Epam.Wunderlist.Web/Epam.Wunderlist.Web.csproj
+++ b/Wunderlist/Epam.Wunderlist.Web/Epam.Wunderlist.Web.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Controllers\WebApi\ItemListController.cs" />
     <Compile Include="Controllers\WebApi\MarkedFilterController.cs" />
     <Compile Include="Controllers\WebApi\OrderController.cs" />
+    <Compile Include="Controllers\WebApi\SearchController.cs" />
     <Compile Include="Controllers\WebApi\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -217,7 +218,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
-    <Compile Include="ViewModels\MarkedToDoItemList.cs" />
+    <Compile Include="ViewModels\FilteredToDoItemList.cs" />
     <Compile Include="ViewModels\OrderViewModel.cs" />
     <Compile Include="ViewModels\ToDoItemListViewModel.cs" />
     <Compile Include="ViewModels\ToDoItemViewModel.cs" />
@@ -319,12 +320,8 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
-    <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\_AccountLayout.cshtml" />
