--- a/Wunderlist/Epam.Wunderlist.Web/Epam.Wunderlist.Web.csproj
+++ b/Wunderlist/Epam.Wunderlist.Web/Epam.Wunderlist.Web.csproj
@@ -226,6 +226,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\account.css" />
+    <Content Include="Content\audio\wl3-complete.m4a" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
