--- a/Wunderlist/Epam.Wunderlist.Web/Web.config
+++ b/Wunderlist/Epam.Wunderlist.Web/Web.config
@@ -22,6 +22,7 @@
     <add key="ApiSecret" value="x3AgJsxmHrllViDQd8BS9sf9hz0" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" defaultRedirect="Error" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
